completed slider functionality and added broken stopAndGo button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <canvas id="canvas1"></canvas>
         <p>Speed: <span id="gameSpeed"></span></p>
         <input type="range" min="0" max="20" value="5" class="slider" id="slider">
+        <button id="stopAndGo">Stop and Go</button>
     </div>
 
 
